--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>com.github.berkleytechnologyservices.restdocs-spec</groupId>
+  <groupId>com.github.cnsgithub.restdocs-spec</groupId>
   <artifactId>restdocs-spec</artifactId>
-  <version>0.10.2-cns</version>
+  <version>0.10.3-cns</version>
   <packaging>pom</packaging>
 
   <name>${project.groupId}:${project.artifactId}</name>
